# brptui

./: Cargo.toml  README.md  flake.nix
src/: brp.rs  events.rs  inspector.rs  keybinds.rs  keys.rs  main.rs  paginated_list.rs
