[package]
name = "brptui"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.13"
crossterm = "0.28.1"
disqualified = "1.0.0"
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
ureq = { version = "2.12.1", features = ["json"], default-features = false }
